# drylabs-workshop-01

./: .gitignore  docker-compose.yml  logs.sh  start.sh  stop.sh
client/: Dockerfile  package-lock.json  package.json
client/src/: App.js  index.js  queries.js
client/src/components/: LoginButton.js  SignUpButton.js
nginx/: Dockerfile  nginx.conf
server/: Dockerfile  pyproject.toml
server/config/: settings.py  urls.py
server/user/: apps.py  signals.py
